# python-gmp

./: .clang-format  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CMakeLists.txt  README.rst  fmt.c  gmp.c  main.c  meson.build  mpz.h  pyproject.toml  python_gmp-0.5.0a7.dev3+g1a075061f-cp314-cp314-macosx_10_15_x86_64.whl  utils.c  utils.h  zz.c  zz.h
.github/workflows/: backport.yml  basic.yml  ci.yml  coverage.yml  linter.yml  os.yml  publish.yml  test.yml  wheels.yml
bench/: README.rst  collatz.py  harmonic.py  mul.py  sum.py  utils.py
docs/: conf.py  index.rst  mpz.rst
scripts/: benchmark.py  cibw_before_all.sh  cibw_repair_wheel_command.sh  fac.py  gitversion.py
tests/: conftest.py  test_api.py  test_functions.py  test_gmp.py  test_memory.py  test_mpz.py  test_outofmem.py  utils.py
