[build-system]
build-backend = "mesonpy"
requires = ["meson-python"]

[project]
name = "python-gmp"
dynamic = ["version"]
description = "Safe bindings to the GNU GMP library"
keywords = ["gmp", "multiple-precision", "arbitrary-precision", "bignum"]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.rst"
authors = [{name = "Sergey B Kirpichev", email = "skirpichev@gmail.com"}]
maintainers = [{name = "Sergey B Kirpichev", email = "skirpichev@gmail.com"}]
classifiers = ["Development Status :: 4 - Beta",
               "Intended Audience :: Developers",
               "Intended Audience :: Science/Research",
               "Natural Language :: English",
               "Operating System :: POSIX",
               "Programming Language :: C",
               "Programming Language :: Python :: 3",
               "Programming Language :: Python :: 3 :: Only",
               "Programming Language :: Python :: 3.11",
               "Programming Language :: Python :: 3.12",
               "Programming Language :: Python :: 3.13",
               "Programming Language :: Python :: 3.14",
               "Programming Language :: Python :: 3.15",
               "Programming Language :: Python :: Free Threading :: 2 - Beta",
               "Programming Language :: Python :: Implementation :: CPython",
               "Programming Language :: Python :: Implementation :: PyPy",
               "Programming Language :: Python :: Implementation :: GraalPy",
               "Operating System :: Microsoft :: Windows",
               "Operating System :: POSIX",
               "Operating System :: Unix",
               "Operating System :: MacOS",
               "Topic :: Scientific/Engineering :: Mathematics",
               "Topic :: Software Development :: Libraries :: Python Modules"]
requires-python = ">= 3.11"

[project.urls]
Homepage = "https://github.com/diofant/python-gmp"
"Source Code" = "https://github.com/diofant/python-gmp"
"Bug Tracker" = "https://github.com/diofant/python-gmp/issues"
Documentation = "https://python-gmp.readthedocs.io/en/latest/"

[project.optional-dependencies]
tests = ["pytest", "hypothesis"]
ci = ["python-gmp[tests]", "pytest-xdist"]
develop = ["python-gmp[tests]", "prek", "pyperf"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "I", "PT", "W", "Q", "SIM"]

[tool.cibuildwheel]
build-frontend = {name="build", args=["--verbose", "-Csetup-args=--vsenv"]}
enable = "pypy cpython-prerelease graalpy"
skip = "gp3*win*amd64*"

before-all = "sh scripts/cibw_before_all.sh"
test-extras = "ci"
test-command = "pytest {package}"

[tool.cibuildwheel.environment]
LD_LIBRARY_PATH = "$(pwd)/.local/lib:$LD_LIBRARY_PATH"
PKG_CONFIG_PATH = "$(pwd)/.local/lib/pkgconfig"
PYTEST_ADDOPTS = "-n 2"
CFLAGS = "-Wall -Wpedantic -Werror -Wconversion"

[tool.cibuildwheel.windows]
archs = ["auto64"]
before-all = "msys2 -c scripts/cibw_before_all.sh"

[tool.cibuildwheel.windows.environment]
PYTEST_ADDOPTS = "-n 2"
CFLAGS = ""
PATH = ".\\\\.local\\\\bin;$PATH"
